[gd_scene load_steps=20 format=3 uid="uid://bxu52wxbotoyg"]

[ext_resource type="Script" path="res://Scripts/hud_Items.gd" id="1_6g43k"]
[ext_resource type="Texture2D" uid="uid://cwouxy1nlew76" path="res://Assets/Bars/Bars_Bg.png" id="2_ixjxs"]
[ext_resource type="Texture2D" uid="uid://c5r1uysmidp7i" path="res://Assets/Bars/All_Bar_Icons.png" id="3_5yhw8"]
[ext_resource type="Texture2D" uid="uid://drw0xpch5mk6p" path="res://Assets/Bars/Oxygen/Behind_OxygenBar.png" id="3_odvaj"]
[ext_resource type="Texture2D" uid="uid://d4k1honr8x72n" path="res://Assets/Bars/Oxygen/Over_OxygenBar.png" id="4_7d1cv"]
[ext_resource type="Texture2D" uid="uid://bwoxsxkdj535j" path="res://Assets/Bars/Health/Behind_HealthBar.png" id="4_ftd2l"]
[ext_resource type="Texture2D" uid="uid://bnmwf6fut6igh" path="res://Assets/Bars/Oxygen/Progress_OxygenBar.png" id="5_oeii6"]
[ext_resource type="Texture2D" uid="uid://bn1aj6rlre2tv" path="res://Assets/Bars/Health/Over_HealthBar.png" id="5_taiux"]
[ext_resource type="Texture2D" uid="uid://c767ofp7pjsif" path="res://Assets/Bars/Health/Progress_HealthBar.png" id="6_co14o"]
[ext_resource type="Texture2D" uid="uid://ls0426aagydn" path="res://Assets/Bars/Hunger/Behind_HungerBar.png" id="10_d2fgt"]
[ext_resource type="Texture2D" uid="uid://d04asxa7jfljo" path="res://Assets/Bars/Hunger/Over_HungerBar.png" id="11_syvwk"]
[ext_resource type="Texture2D" uid="uid://cgb7veancwltg" path="res://Assets/Bars/Hunger/Progress_HungerBar.png" id="12_2kwff"]
[ext_resource type="Texture2D" uid="uid://b7pnku7lnd8ny" path="res://Assets/Bars/HUD_Char.png" id="13_80ee0"]
[ext_resource type="AudioStream" uid="uid://c55g6l52q0dui" path="res://Assets/Audio/space-sound-hi-low-109574.mp3" id="14_b308h"]
[ext_resource type="FontFile" uid="uid://cnaury175fy8e" path="res://Pixel_fonts/Beanstalk.ttf" id="14_c2jd8"]
[ext_resource type="AudioStream" uid="uid://care8r17keqid" path="res://Assets/Audio/damage taken.wav" id="15_wg6eb"]

[sub_resource type="Animation" id="Animation_yppsl"]
resource_name = "Guide_Reveal"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Full_Screen_Control/Guide:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 4.4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_e6qvc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Full_Screen_Control/Guide:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3bp4k"]
_data = {
"Guide_Reveal": SubResource("Animation_yppsl"),
"RESET": SubResource("Animation_e6qvc")
}

[node name="HudItems" type="CanvasLayer"]
layer = 2
script = ExtResource("1_6g43k")

[node name="Full_Screen_Control" type="Control" parent="."]
custom_minimum_size = Vector2(640, 360)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Top_Control" type="Control" parent="Full_Screen_Control"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="BarsTimer" type="Timer" parent="Full_Screen_Control/Top_Control"]

[node name="Bars_hud" type="TextureRect" parent="Full_Screen_Control/Top_Control"]
visible = false
layout_mode = 0
offset_left = 11.0
offset_top = 8.0
offset_right = 217.0
offset_bottom = 53.0
texture = ExtResource("2_ixjxs")

[node name="IconTexture" type="TextureRect" parent="Full_Screen_Control/Top_Control/Bars_hud"]
layout_mode = 0
offset_right = 206.0
offset_bottom = 45.0
texture = ExtResource("3_5yhw8")

[node name="HealthBar" type="TextureProgressBar" parent="Full_Screen_Control/Top_Control/Bars_hud"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
value = 95.0
texture_under = ExtResource("4_ftd2l")
texture_over = ExtResource("5_taiux")
texture_progress = ExtResource("6_co14o")

[node name="OxygenBar" type="TextureProgressBar" parent="Full_Screen_Control/Top_Control/Bars_hud"]
layout_mode = 0
offset_right = 206.0
offset_bottom = 45.0
min_value = 29.0
max_value = 111.5
step = 0.5
value = 103.5
texture_under = ExtResource("3_odvaj")
texture_over = ExtResource("4_7d1cv")
texture_progress = ExtResource("5_oeii6")

[node name="HungerBar" type="TextureProgressBar" parent="Full_Screen_Control/Top_Control/Bars_hud"]
layout_mode = 0
offset_right = 206.0
offset_bottom = 45.0
max_value = 86.5
step = 0.5
value = 75.0
nine_patch_stretch = true
texture_under = ExtResource("10_d2fgt")
texture_over = ExtResource("11_syvwk")
texture_progress = ExtResource("12_2kwff")

[node name="CharFrame" type="TextureRect" parent="Full_Screen_Control/Top_Control/Bars_hud"]
layout_mode = 0
offset_right = 206.0
offset_bottom = 45.0
texture = ExtResource("13_80ee0")

[node name="Guide" type="Panel" parent="Full_Screen_Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -106.0
grow_horizontal = 2
grow_vertical = 0

[node name="Gui" type="Label" parent="Full_Screen_Control/Guide"]
layout_mode = 0
offset_left = 12.0
offset_top = 17.0
offset_right = 192.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("14_c2jd8")
text = "Press W A S D To Move
Tab : to open Inventory
U :  to use 
Q :  to Shoot "

[node name="Guide_Button" type="Button" parent="Full_Screen_Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -42.21
offset_right = -19.0
offset_bottom = -19.21
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("14_c2jd8")
text = "[G] Guide"

[node name="Anim_palyer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3bp4k")
}

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_b308h")
volume_db = -1.5

[node name="Damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_wg6eb")
volume_db = -1.0
bus = &"SFX"

[connection signal="timeout" from="Full_Screen_Control/Top_Control/BarsTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Full_Screen_Control/Top_Control/BarsTimer" to="Full_Screen_Control" method="_on_timer_timeout"]
[connection signal="pressed" from="Full_Screen_Control/Guide_Button" to="." method="_on_guide_button_pressed"]
